k8s/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: adrenlinerush-wiki
  name: adrenlinerush-wiki-service
  labels:
    app: adrenlinerush-wiki
spec:
  type: ClusterIP
  selector:
    app: adrenlinerush-wiki
  ports:
  - port: 80    
    protocol: TCP
